test/good/classes/method03.px

class Test def
    Int value

    func add(Int v: 0) def
        this.value += v

    func multiply(Int v: 1) def
        this.value *= v

t = Test(3)
t.add()
t.add(1)
t.multiply()
t.multiply(v=4)
print t.value
